chore: fixed questions alignment, notion link,  gallery landscape

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,3 +31,7 @@ body {
     text-wrap: balance;
   }
 }
+
+.underline-link {
+  color: #a73157;
+}
